--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-header></app-header>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 
 
-<h1>{{title}}</h1>
-<button (click)="clickHandler()" >clickme</button>
+
+
