Added button component

--- a/my-app/src/app/button/button.component.html
+++ b/my-app/src/app/button/button.component.html
@@ -1,1 +1,6 @@
-<p>button works!</p>
+<div (click)="onClick($event)">
+  <button class="btn btn-primary">
+    <ng-content></ng-content>
+  </button>
+
+</div>
