--- a/my-app/src/app/common/header/header.component.html
+++ b/my-app/src/app/common/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Angular Car Rental</a>
+  <a class="navbar-brand" href="/">Angular Car Rental</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -12,7 +12,11 @@
         <a class="nav-link" routerLink="/user">User </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/login">Login <span class="sr-only">(current)</span></a>
+        <a *ngIf="!Auth.isLogged()"   class="nav-link" routerLink="/login">Login </a>
+
+      </li>
+      <li class="nav-item active">
+        <a *ngIf="Auth.isLogged()" class="nav-link" routerLink="/logout">Logout </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Register</a>
