--- a/my-app/src/styles.scss
+++ b/my-app/src/styles.scss
@@ -49,3 +49,6 @@ html, body, p
     }
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
