--- a/my-app/src/app/vehicles/vehicles.component.html
+++ b/my-app/src/app/vehicles/vehicles.component.html
@@ -1,2 +1,2 @@
 <h1> Veicoli Disponibili</h1>
-<app-table [colData]="colData" [rowData]="rowData"></app-table>
+<app-table [colData]="{'headers':headerData}" [rowData]="rowData"></app-table>
