Added table sorting

--- a/my-app/src/app/common/footer/footer.component.html
+++ b/my-app/src/app/common/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small bg-dark pt-4">
+<footer class="page-footer font-small bg-light pt-4">
 
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
@@ -11,7 +11,7 @@
       <div class="col-md-6 mt-md-0 mt-3">
 
         <!-- Content -->
-        <h5 class="text-uppercase" style="color:white">Footer Content</h5>
+        <h5 class="text-uppercase" style="color:blue">Footer Content</h5>
         <p>Here you can use rows and columns to organize your footer content.</p>
 
       </div>
@@ -23,7 +23,7 @@
       <div class="col-md-3 mb-md-0 mb-3">
 
         <!-- Links -->
-        <h5 class="text-uppercase" style="color:white">Links</h5>
+        <h5 class="text-uppercase" style="color:blue">Links</h5>
 
         <ul class="list-unstyled">
           <li>
@@ -47,7 +47,7 @@
       <div class="col-md-3 mb-md-0 mb-3">
 
         <!-- Links -->
-        <h5 class="text-uppercase" style="color:white">Links</h5>
+        <h5 class="text-uppercase" style="color:blue">Links</h5>
 
         <ul class="list-unstyled">
           <li>
@@ -74,7 +74,7 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3" style="color:white">© 2020 Copyright:
+  <div class="footer-copyright text-center py-3" style="color:blue">© 2020 Copyright:
     <a href="#"> riccardopalmieri.com</a>
   </div>
   <!-- Copyright -->
