--- a/my-app/src/app/table/table.component.html
+++ b/my-app/src/app/table/table.component.html
@@ -1,10 +1,9 @@
-<p>table works!</p>
 
 
-<table id="vehicles" border="1" class="table table-striped table-bordered table-sm">
+<table matSort (matSortChange)="onClick($event)" id="vehicles" border="1" class="table table-striped table-bordered table-sm">
   <thead>
   <tr>
-   <th *ngFor="let key of colData.headers">{{key.label}}</th>
+   <th mat-sort-header="{{key.label}}" *ngFor="let key of colData.headers">{{key.label}}</th>
 
   </tr>
   </thead>
@@ -22,3 +21,5 @@
 
 
   </tbody>
+
+</table>
