--- a/my-app/src/app/button/button.component.html
+++ b/my-app/src/app/button/button.component.html
@@ -1,5 +1,5 @@
-<div (click)="onClick($event)">
-  <button [ngStyle]="buttonConfig.customCssClass" class="btn btn-primary">
+<div (click)="onClick($event)" >
+  <button [ngStyle]="buttonConfig.customCssClass" class="btn btn-primary mat-elevation-z8">
     <mat-icon>{{buttonConfig.icon}}</mat-icon>
     {{buttonConfig.text}}
     <ng-content></ng-content>
