--- a/my-app/src/app/common/footer/footer.component.html
+++ b/my-app/src/app/common/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small bg-light pt-4">
+<footer class="page-footer font-small bg-light pt-4 mat-elevation-z8">
 
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
