--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -2,18 +2,18 @@
 
 
 
-<div class="container form-control" *ngIf="!Auth.isLogged()" style="text-align: center">
+<div class="container-fluid form-control mat-elevation-z8" *ngIf="!Auth.isLogged()" style="text-align: center">
 <div class="row">
 
-  <div class="col-md-6">
+  <div class="col-sm-12" >
 
     <div class="form-group" style="align-content: center">
 
-      <input type="text" id="userName" placeholder="Username" [(ngModel)]="userName" class="form-control" >
+      <input type="text" id="userName" placeholder="Username" [(ngModel)]="userName" class="form-control" style="text-align: center" >
 
     </div>
     <div class="form-group" style="text-align: center">
-      <input type="password" id="password" placeholder="Password" [(ngModel)]="password" class="form-control">
+      <input type="password" id="password" placeholder="Password" [(ngModel)]="password" class="form-control" style="text-align: center">
 
     </div>
     <div>
@@ -21,7 +21,7 @@
       <p class="alert-danger" *ngIf='!auth'>  {{msg}} </p>
 
     </div>
-    <app-button class="btn btn-primary" [buttonConfig]="{'customCssClass':'','text':'login','icon':'home'}" (notify)="gestAuth()"></app-button>
+    <app-button [buttonConfig]="{'customCssClass':'','text':'login','icon':'home'}" (notify)="gestAuth()"></app-button>
     <!--<button class="btn btn-primary"  (click)="gestAuth()">Login</button>-->
 
 
@@ -31,6 +31,9 @@
 
 
 </div>
+<br>
+<br>
+
 
 
 
