--- a/my-app/src/app/table/table.component.html
+++ b/my-app/src/app/table/table.component.html
@@ -1,4 +1,6 @@
 
+<div class="mat-elevation-z8">
+
 
 <table mat-table matSort (matSortChange)="onClick($event)" id="vehicles" border="1" class="table table-striped table-bordered table-sm" matSortActive="{{order.defaultColumn}}" matSortDirection="{{order.orderType}}">
   <thead>
@@ -23,3 +25,5 @@
   </tbody>
 
 </table>
+<mat-paginator  [length]="pagination.itemPerPage" [pageSizeOptions]="pagination.itemPerPageOptions" showFirstLastButtons></mat-paginator>
+</div>
