--- a/my-app/src/app/vehicles/vehicles.component.html
+++ b/my-app/src/app/vehicles/vehicles.component.html
@@ -1,2 +1,2 @@
 <h1> Veicoli Disponibili</h1>
-<app-table  [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}"></app-table>
+<app-table  [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[5,10,20]}"></app-table>
