--- a/my-app/src/app/table/table.component.html
+++ b/my-app/src/app/table/table.component.html
@@ -25,5 +25,5 @@
   </tbody>
 
 </table>
-<mat-paginator  [length]="pagination.itemPerPage" [pageSizeOptions]="pagination.itemPerPageOptions" showFirstLastButtons></mat-paginator>
+<mat-paginator  [pageSize]="pagination.itemPerPage"  [pageSizeOptions]="pagination.itemPerPageOptions" showFirstLastButtons></mat-paginator>
 </div>
