--- a/my-app/src/app/vehicles/vehicles.component.html
+++ b/my-app/src/app/vehicles/vehicles.component.html
@@ -1,4 +1,4 @@
 <h1> Veicoli Disponibili</h1>
-<app-table  [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':2, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
+<app-table (action)="eventHandler($event)" [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':2, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
 <br>
 <br>
