--- a/my-app/src/app/vehicles/vehicles.component.html
+++ b/my-app/src/app/vehicles/vehicles.component.html
@@ -2,3 +2,50 @@
 <app-table (action)="eventHandler($event)" [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':2, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
 <br>
 <br>
+
+
+<div class="portlet-body form">
+  <h2> Inserisci i dati del veicolo</h2>
+  <form>
+    {{newVehicle}}
+    <div class="form-body">
+      <div class="form-group">
+        <label for="id">Id</label>
+        <input id="id" name="id" path="id" type="text" class="form-control" placeholder="Id" [(ngModel)]="newVehicle.id"/>
+
+      </div>
+
+
+      <div class="form-group">
+        <label for="brand">Brand</label>
+        <input id="brand" name="brand" path="brand" type="text" class="form-control" placeholder="Brand"  [(ngModel)]="newVehicle.brand" />
+
+      </div>
+
+      <div class="form-group">
+        <label for="model">Model</label>
+        <input id="model"  name="model"  path="model" type="text" class="form-control" placeholder="Model"  [(ngModel)]="newVehicle.model"/>
+      </div>
+      <div class="form-group">
+        <label for="immdate">Data di Immatricolazione</label>
+        <input id="immdate" name="immdate" path="immdate" type="date" class="form-control" placeholder="immdate"  [(ngModel)]="newVehicle.immdate" />
+      </div>
+
+
+      <div class="form-group">
+        <label for="plate">plate</label>
+        <input id="plate" name="plate" path="plate" type="text" class="form-control" placeholder="plate"  [(ngModel)]="newVehicle.plate"/>
+      </div>
+      <div class="form-group">
+        <label for="type">Tipo</label>
+        <select id="type" path="type" name="type" class="form-control"  [(ngModel)]="newVehicle.type">
+          <option value="berlina" label="berlina"></option>
+          <option value="suv" label="suv" ></option>
+          <option value="furgone" label="furgone"></option>
+          <option value="tir" label="tir"></option>
+        </select>
+      </div>
+    </div>
+  </form>
+</div>
+<app-button [buttonConfig]="{'customCssClass':'','text':'Register Vehicle','icon':'directions_car'}" (notify)="insert()"></app-button>
