--- a/my-app/src/app/button/button.component.html
+++ b/my-app/src/app/button/button.component.html
@@ -1,8 +1,8 @@
-<div (click)="onClick($event)" >
-  <button [ngStyle]="buttonConfig.customCssClass" class="btn btn-primary mat-elevation-z8">
+
+  <button (click)="onClick($event)" [ngStyle]="buttonConfig.customCssClass" class="btn btn-primary mat-elevation-z8">
     {{buttonConfig.text}}
     <mat-icon>{{buttonConfig.icon}}</mat-icon>
     <ng-content></ng-content>
   </button>
 
-</div>
+
