--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -1,6 +1,9 @@
 
 
-
+<div class="align-content-center">
+    <h1 style="text-align:center">Benvenuto in Anuglar Car Rent</h1>
+    <h3 *ngIf="Auth.isLogged()">Il tuo nome è: {{userName}}</h3>
+</div>
 
 <div class="container form-control mat-elevation-z8 col-sm-6" *ngIf="!Auth.isLogged()" style="text-align: center">
 
