--- a/my-app/src/app/common/header/header.component.html
+++ b/my-app/src/app/common/header/header.component.html
@@ -12,6 +12,9 @@
         <a class="nav-link" routerLink="/user">User </a>
       </li>
       <li class="nav-item active">
+        <a class="nav-link" routerLink="/reservations">Reservations </a>
+      </li>
+      <li class="nav-item active">
         <a *ngIf="!Auth.isLogged()"   class="nav-link" routerLink="/login">Login </a>
 
       </li>
