--- a/my-app/src/app/reservation/reservation.component.html
+++ b/my-app/src/app/reservation/reservation.component.html
@@ -5,13 +5,13 @@
 
   <div class="form-group" >
     <label>Inserisci la data di inizio</label>
-    <input type="date" id="dataInizio" placeholder="dataInizio" [ngModel]="reservation.dataInizio | date:'fullDate'"   name="dataInizio" class="form-control" style="text-align: center" >
+    <input type="date" id="dataInizio" placeholder="dataInizio" [ngModel]="dataInizio " (ngModelChange)="dataInizio = $event"  name="dataInizio" class="form-control" style="text-align: center" >
 
   </div>
 
   <div class="form-group" >
     <label>Inserisci la data di fine</label>
-    <input type="date" id="dataFine" placeholder="dataFine" [ngModel]="reservation.dataFine | date:'fullDate'" name="dataFine" class="form-control" style="text-align: center">
+    <input type="date" id="dataFine" placeholder="dataFine" [ngModel]="dataFine"  (ngModelChange)="dataFine = $event" name="dataFine" class="form-control" style="text-align: center">
 
   </div>
   <div>
