--- a/my-app/src/app/user/user.component.html
+++ b/my-app/src/app/user/user.component.html
@@ -9,6 +9,6 @@
 
 <br>
 <h4> Le mie prenotazioni </h4>
-<app-table [colData]="{'headers':reservationHeaderData}" [id]="'ricerca'" [rowData]="currentReservations"  [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[5,10,20]}" [search]="{columns:['id','dataInizio', 'dataFine']}"   ></app-table>
+<app-table [colData]="{'headers':reservationHeaderData}" [id]="'ricerca'" [rowData]="currentReservations"  [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[5,10,20]}" [search]="{columns:['id','dataInizio', 'dataFine', 'plate', 'userName']}"   ></app-table>
 
 
